@@ -1,5 +1,6 @@
 libnvidia-container (1.10.0~rc.1-1) experimental; urgency=medium
 
+  * [WSL2] Fix bug where /dev/dgx is not mounted when NVIDIA_DRIVER_CAPABILITIES does not include "compute"
   * [WSL2] Fix segmentation fault on WSL2s system with no adpaters present (e.g. /dev/dgx missing)
 
  -- NVIDIA CORPORATION <cudatools@nvidia.com> Thu, 24 Mar 2022 11:25:07 +0200
